--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app-for-cloud-lab:v1.0.0 .
 
-  # Job 2: Push the image to DockerHub
+    # Job 2: Push the image to DockerHub
   push-to-dockerhub:
     runs-on: ubuntu-latest
     needs: build # This job depends on the `build` job
@@ -33,6 +33,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: List Docker images (Before push)
+        run: |
+          docker images # This will show all images that are available before pushing
 
       - name: Push Docker Image
         run: |
