--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,10 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app-for-cloud-lab:v1.0.0 .
 
+      - name: List Docker images (Before job 2)
+        run: |
+          docker images # This will show all images that are available before pushing
+
     # Job 2: Push the image to DockerHub
   push-to-dockerhub:
     runs-on: ubuntu-latest
