--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,12 +6,13 @@ on:
       - main # The workflow runs on every push to the `main` branch
 
 jobs:
+ jobs:
   # Job 1: Build the Docker image
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3 # Retrieve the source code
+        uses: actions/checkout@v3
 
       - name: Log in to DockerHub
         uses: docker/login-action@v2
@@ -23,30 +24,17 @@ jobs:
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/flask-app-for-cloud-lab:v1.0.0 .
 
-      - name: List Docker images (Before job 2)
-        run: |
-          docker images # This will show all images that are available before pushing
-
-    # Job 2: Push the image to DockerHub
-  push-to-dockerhub:
-    runs-on: ubuntu-latest
-    needs: build # This job depends on the `build` job
-    steps:
-      - name: Log in to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: List Docker images (Before push)
-        run: |
-          docker images # This will show all images that are available before pushing
-
-      - name: Push Docker Image
+      - name: Push Docker Image to DockerHub
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/flask-app-for-cloud-lab:v1.0.0
 
-  # Job 3: Deploy to Azure Container Apps
+      - name: List Docker images (Before job 2)
+        run: |
+          docker images
+
+  
+
+  # Job 2: Deploy to Azure Container Apps
   deploy-to-azure:
     runs-on: ubuntu-latest
     needs: push-to-dockerhub # This job depends on the `push-to-dockerhub` job
